<resources>
    <string name="app_name">SD-Wallet</string>
    <string name="no_internet">无网络连接~！</string>
    <string name="generic_server_down">连接服务器失败~！</string>
    <string name="generic_error">网络异常,请稍后再试~！</string>
    <string name="pay_error_1">请先实名认证</string>
    <string name="pay_error_2">不能给自己当前账户转账</string>
    <string name="pay_error_3">输入金额不合法</string>
    <string name="pay_error_4">金额不可超过6位小数</string>
    <string name="pay_error_5">余额不足</string>
    <string name="pay_error_6">输入金额不可为0</string>
    <string-array name="select_dialog_notice">
        <item>现在升级</item>
        <item>不，谢谢</item>
    </string-array>
    <string-array name="select_dialog_notice_force">
        <item>现在升级</item>
    </string-array>
    <string-array name="changeWay_login">
        <item>手机</item>
        <item>邮箱</item>
    </string-array>
    <string name="xydialog2_refresh">刷新</string>
    <string name="info1">资产</string>
    <string name="info2">转账</string>
    <string name="info4">我的</string>
    <string name="info5">忘记密码</string>
    <string name="info6">转账</string>
    <string name="info10">正在转账....</string>
    <string name="info11">正在设置支付密码....</string>
    <string name="info12">钱包地址</string>
    <string name="info14">好友</string>
    <string name="info15">转账记录</string>
    <string name="info17">更新</string>
    <string name="info18">已有新版本可用</string>
    <string name="info19">消息</string>
    <string name="info20">设置</string>
    <string name="info21">获取版本</string>
    <string name="info23">扫描结果</string>
    <string name="info26">新钱包</string>
    <string name="info27">钱包创建中...</string>
    <string name="info28">正在激活钱包...</string>
    <string name="info29">获取版本</string>
    <string name="info30">钱包导入中...</string>
    <string name="info31">正在修改钱包密码....</string>
    <string name="info32">正在修改钱包昵称...</string>
    <string name="info36">添加钱包</string>
    <string name="info37">设置钱包密码</string>
    <string name="info38">确认</string>
    <string name="info39">取消</string>
    <string name="info40">账号</string>
    <string name="info41">手机号/邮箱</string>
    <string name="info42">密码</string>
    <string name="info43">6~16位密码</string>
    <string name="info44">登录</string>
    <string name="info45">注册</string>
    <string name="info46">忘记密码</string>
    <string name="info47">正在登录....</string>
    <string name="info48">正在修改登录密码....</string>
    <string name="info51">下一步</string>
    <string name="info52">正在修改密码...</string>
    <string name="info53">正在修改钱包密码....</string>
    <string name="info54">国家/地区</string>
    <string name="info55">+86 中国</string>
    <string name="info56">手机号码</string>
    <string name="info57">验证码</string>
    <string name="info58">下一步</string>
    <string name="info59">密码</string>
    <string name="info62">注册</string>
    <string name="info63">邮箱</string>
    <string name="info65">获取验证码</string>
    <string name="info70">获取邮箱验证码...</string>
    <string name="info71">绑定邮箱...</string>
    <string name="info72">获取邮箱验证码...</string>
    <string name="info73">绑定邮箱...</string>
    <string name="info74">获取图片验证码...</string>
    <string name="info75">换绑邮箱</string>
    <string name="info76">相同邮箱不可换绑</string>
    <string name="info77">请输入正确的邮箱</string>
    <string name="info78">请先获取验证码</string>
    <string name="info79">请输入正确的邮箱</string>
    <string name="info80">相同邮箱不可换绑</string>
    <string name="info81">获取验证码</string>
    <string name="info82">获取验证码成功</string>
    <string name="info83">绑定邮箱</string>
    <string name="info84">相同邮箱不可换绑</string>
    <string name="info85">请输入正确的邮箱</string>
    <string name="info86">请先获取验证码</string>
    <string name="info87">请输入正确的邮箱</string>
    <string name="info88">相同邮箱不可换绑</string>
    <string name="info89">获取验证码</string>
    <string name="info90">获取验证码成功</string>
    <string name="info91">获取手机验证码...</string>
    <string name="info92">绑定手机号</string>
    <string name="info93">获取手机验证码...</string>
    <string name="info94">绑定手机号</string>
    <string name="info95">获取图片验证码...</string>
    <string name="info96">换绑手机号</string>
    <string name="info97">相同手机号不可换绑</string>
    <string name="info98">请输入正确的手机号</string>
    <string name="info99">请先获取验证码</string>
    <string name="info100">请输入正确的手机号</string>
    <string name="info101">相同手机号不可换绑</string>
    <string name="info102">获取验证码</string>
    <string name="info103">获取验证码成功</string>
    <string name="info104">绑定手机号</string>
    <string name="info105">相同手机号不可换绑</string>
    <string name="info106">请先获取验证码</string>
    <string name="info107">请输入正确的手机号</string>
    <string name="info108">相同手机号不可换绑</string>
    <string name="info109">获取验证码</string>
    <string name="info110">获取验证码成功</string>
    <string name="info133">SD-Wallet</string>
    <string name="info134">关于我们</string>
    <string name="info135">转出金额:</string>
    <string name="info136">收款方:</string>
    <string name="info137">转入金额:</string>
    <string name="info138">发款方:</string>
    <string name="info139">正在获取交易详情...</string>
    <string name="info140">正在获取交易列表...</string>
    <string name="info141">账单</string>
    <string name="info145">本月</string>
    <string name="info146">完成</string>
    <string name="info147">取消</string>
    <string name="info148">账单详情</string>
    <string name="info149">转出</string>
    <string name="info150">转入</string>
    <string name="key000163">授信</string>
    <string name="info168">获取授信列表...</string>
    <string name="info169">正在授信...</string>
    <string name="info170">正在取消授信...</string>
    <string name="info171">获取授信列表...</string>
    <string name="info172">发款通知：</string>
    <string name="info173">收款通知：</string>
    <string name="info174">发款成功</string>
    <string name="info175">收款成功</string>
    <string name="info176">收款方：</string>
    <string name="info177">发款方：</string>
    <string name="info178">正在获取消息详情...</string>
    <string name="info179">正在获取消息列表...</string>
    <string name="info180">正在搜索好友...</string>
    <string name="info181">正在获取好友详情...</string>
    <string name="info182">正在添加好友...</string>
    <string name="info183">正在删除好友...</string>
    <string name="info184">正在搜索好友...</string>
    <string name="info185">添加好友</string>
    <string name="info186">请输入搜索关键字</string>
    <string name="info187">相机</string>
    <string name="info188">加载中...</string>
    <string name="info189">操作失败,请检查输入信息</string>
    <string name="info191">您的账号已在别的设备登录，您被强制下线</string>
    <string name="info192">当前是WIFI网络</string>
    <string name="info193">当前是有线网络</string>
    <string name="info194">当前是3g网络</string>
    <string name="info195">网络已断开</string>
    <string name="info196">下载失败</string>
    <string name="info197">正在下载，请稍等.....</string>
    <string name="info198">Sd-Wallet正在下载</string>
    <string name="info199">实名认证</string>
    <string name="info200">请输入正确的身份证号码</string>
    <string name="info201">我的二维码</string>
    <string name="info203">已复制</string>
    <string name="info204">已复制</string>
    <string name="info205">存储</string>
    <string name="info206">存储</string>
    <string name="info209">提醒</string>
    <string name="info210">确认保存好了公钥私钥吗？</string>
    <string name="info211">确定</string>
    <string name="info212">取消</string>
    <string name="info213">授信</string>
    <string name="info214">授信记录</string>
    <string name="info215">钱包密码</string>
    <string name="info216">确认</string>
    <string name="info217">请输入钱包密码</string>
    <string name="info218">忘记密码</string>
    <string name="info219">授信记录</string>
    <string name="info220">密码修改成功，请登录</string>
    <string name="info221">密码不能为空</string>
    <string name="info222">密码不是6到16位</string>
    <string name="info223">输入密码不相同</string>
    <string name="info224">请输入正确的账号</string>
    <string name="info225">请先获取验证码</string>
    <string name="info226">请先获取验证码</string>
    <string name="info227">获取验证码</string>
    <string name="info228">获取验证码成功</string>
    <string name="info229">忘记钱包密码</string>
    <string name="info230">相机</string>
    <string name="info231">密码不能为空</string>
    <string name="info232">密码不是6到16位</string>
    <string name="info233">输入密码不相同</string>
    <string name="info234">选择好友</string>
    <string name="info235">好友</string>
    <string name="info236">确认添加好友?</string>
    <string name="info237">添加好友</string>
    <string name="info238">删除好友</string>
    <string name="info239">确认删除好友</string>
    <string name="info240">添加好友</string>
    <string name="info241">确认添加好友？</string>
    <string name="info242">确定</string>
    <string name="info243">取消</string>
    <string name="info244">未实名</string>
    <string name="info245">删除</string>
    <string name="info246">添加</string>
    <string name="info247">删除</string>
    <string name="info248">添加</string>
    <string name="info249">导入钱包</string>
    <string name="info250">设置钱包密码</string>
    <string name="info251">确认</string>
    <string name="info252">取消</string>
    <string name="info253">相机</string>
    <string name="info254">相机</string>
    <string name="info255">密钥</string>
    <string name="info256">钱包密码</string>
    <string name="info257">确认</string>
    <string name="info258">请输入钱包密码</string>
    <string name="info259">已复制</string>
    <string name="info260">相机</string>
    <string name="info261">未设置</string>
    <string name="info262">已经保存至</string>
    <string name="info263">下</string>
    <string name="info264">输入不能为空</string>
    <string name="info265">双击返回键退出程序！</string>
    <string name="info266">我的账户</string>
    <string name="info267">未设置</string>
    <string name="info268">未设置</string>
    <string name="info269">未设置</string>
    <string name="info270">昵称</string>
    <string name="info271">请输入昵称</string>
    <string name="info272">确定</string>
    <string name="info273">昵称长度不能超过10位</string>
    <string name="info274">消息详情</string>
    <string name="info275">转出</string>
    <string name="info276">转入</string>
    <string name="info279">密码不能为空</string>
    <string name="info280">密码位数不对</string>
    <string name="info281">输入密码不相同</string>
    <string name="info282">请先获取验证码</string>
    <string name="info283">请输入正确的邮箱</string>
    <string name="info284">通话</string>
    <string name="info285">图形验证码获取中......</string>
    <string name="info286">请先获取验证码</string>
    <string name="info287">获取验证码</string>
    <string name="info288">获取验证码成功</string>
    <string name="info289">提示：区分大小写</string>
    <string name="info290">获取图片验证码失败</string>
    <string name="info292">密码不能为空</string>
    <string name="info293">密码位数不对</string>
    <string name="info294">输入密码不相同</string>
    <string name="info295">请先获取验证码</string>
    <string name="info296">请输入正确的手机号码</string>
    <string name="info297">通话</string>
    <string name="info298">图形验证码获取中......</string>
    <string name="info299">请先获取验证码</string>
    <string name="info300">获取验证码</string>
    <string name="info301">获取验证码成功</string>
    <string name="info302">提示：区分大小写</string>
    <string name="info303">获取图片验证码失败</string>
    <string name="info304">修改登录密码</string>
    <string name="info305">手机号</string>
    <string name="info306">邮箱</string>
    <string name="info307">获取验证码</string>
    <string name="info308">密码不能为空</string>
    <string name="info309">密码不是6到16位</string>
    <string name="info310">输入密码不相同</string>
    <string name="info311">请先获取验证码</string>
    <string name="info312">获取验证码成功</string>
    <string name="info313">设置</string>
    <string name="info314">选择修改方式</string>
    <string name="info315">请先绑定手机号</string>
    <string name="info523">发款方</string>
    <string name="info524">收款方</string>
    <string name="info525">金额</string>
    <string name="info526">手续费</string>
    <string name="info527">交易时间</string>
    <string name="info528">交易hash</string>
    <string name="info529">区块</string>
    <string name="info530">交易类型</string>
    <string name="info531">转入</string>
    <string name="info532">状态</string>
    <string name="info533">已成功交易</string>
    <string name="info534">备注</string>
    <string name="info641">6fpc33CKwd915d6PWVjP51TxpwnjAHjoa</string>
    <string name="info642">942BDD668C0B11E77E9EDCFC928997FBB292266C8E62442C74B089EFF46CCD85</string>
</resources>